tdf#153664 Export correct Table of Figures paragraph style

Change-Id: I892a0185a94aadd902e55ee9b719f855edbdfc89
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149258
Tested-by: Jenkins
Reviewed-by: Gabor Kelemen <kelemeng@ubuntu.com>